Signed-off-by: zhaowg <wgzhaowg@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>tt.notice</groupId>
-	<artifactId>ttnotice</artifactId>
-	<version>5.0.0-SNAPSHOT</version>
+	<groupId>com.etumq</groupId>
+	<artifactId>EtuMq</artifactId>
+	<version>0.0.1</version>
 	<packaging>war</packaging>
 	<name>EtuMq</name>
 	<description>Easy To User Message Queue</description>
@@ -14,13 +14,6 @@
 		<spring.framework.version>3.1.2.RELEASE</spring.framework.version>
 		<org.eclipse.jetty.version>8.1.5.v20120716</org.eclipse.jetty.version>
 	</properties>
-	<repositories>
-		<repository>
-			<id>public</id>
-			<name>Public Repositories</name>
-			<url>http://192.168.53.58:5566/nexus/content/groups/public</url>
-		</repository>
-	</repositories>
 	<dependencies>
 		<!-- common jar start -->
 		<dependency>
@@ -29,11 +22,6 @@
 			<version>4.8.1</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.amqp</groupId>
-			<artifactId>spring-amqp</artifactId>
-			<version>${spring.amqp.version}</version>
-		</dependency>		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
